--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -11,14 +11,14 @@ version = '0.0.1'
 targets = ['x86_64-unknown-linux-gnu']
 
 [build-dependencies]
-substrate-wasm-builder = '3.0.0'
+substrate-wasm-builder = { version = '4.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
 
 # alias "parity-scale-code" to "codec"
 [dependencies.codec]
 default-features = false
 features = ['derive']
 package = 'parity-scale-codec'
-version = '1.3.4'
+version = '2.0.0'
 
 [dependencies]
 hex-literal = { optional = true, version = '0.3.1' }
@@ -28,45 +28,50 @@ serde = { features = ['derive'], optional = true, version = '1.0.119' }
 pallet-template = { path = '../pallets/template', default-features = false, version = '0.0.1' }
 
 # Substrate dependencies
-frame-benchmarking = { default-features = false, optional = true, version = '2.0.1' }
-frame-executive = { default-features = false, version = '2.0.1' }
-frame-support = { default-features = false, version = '2.0.1' }
-frame-system = { default-features = false, version = '2.0.1' }
-frame-system-benchmarking = { default-features = false, optional = true, version = '2.0.1' }
-frame-system-rpc-runtime-api = { default-features = false, version = '2.0.1' }
-pallet-aura = { default-features = false, version = '2.0.1' }
-pallet-balances = { default-features = false, version = '2.0.1' }
-pallet-grandpa = { default-features = false, version = '2.0.1' }
-pallet-randomness-collective-flip = { default-features = false, version = '2.0.1' }
-pallet-sudo = { default-features = false, version = '2.0.1' }
-pallet-timestamp = { default-features = false, version = '2.0.1' }
-pallet-transaction-payment = { default-features = false, version = '2.0.1' }
-pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '2.0.1' }
-sp-api = { default-features = false, version = '2.0.1' }
-sp-block-builder = { default-features = false, version = '2.0.1' }
-sp-consensus-aura = { default-features = false, version = '0.8.1' }
-sp-core = { default-features = false, version = '2.0.1' }
-sp-inherents = { default-features = false, version = '2.0.1' }
-sp-offchain = { default-features = false, version = '2.0.1' }
-sp-runtime = { default-features = false, version = '2.0.1' }
-sp-session = { default-features = false, version = '2.0.1' }
-sp-std = { default-features = false, version = '2.0.1' }
-sp-transaction-pool = { default-features = false, version = '2.0.1' }
-sp-version = { default-features = false, version = '2.0.1' }
-pallet-evm = { default-features = false, version = '2.0.1' }
+#frame-benchmarking = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', optional = true }
+frame-executive = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+#frame-system-benchmarking = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', optional = true }
+frame-system-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+pallet-aura = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+pallet-balances = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+pallet-grandpa = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+pallet-randomness-collective-flip = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+pallet-sudo = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+pallet-timestamp = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+pallet-transaction-payment = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-block-builder = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-consensus-aura = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-inherents = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-offchain = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-session = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-transaction-pool = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-version = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sc-network = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+
+pallet-evm = { default-features = false, git = 'https://github.com/thanhtung6824/frontier.git', branch = 'v0.1-polka' }
+pallet-ethereum = { default-features = false, git = 'https://github.com/thanhtung6824/frontier.git', branch = 'v0.1-polka' }
+
+fp-rpc = { default-features = false, git = 'https://github.com/thanhtung6824/frontier.git', branch = 'v0.1-polka' }
 
 [features]
 default = ['std']
-runtime-benchmarks = [
-    'hex-literal',
-    'frame-benchmarking',
-    'frame-support/runtime-benchmarks',
-    'frame-system-benchmarking',
-    'frame-system/runtime-benchmarks',
-    'pallet-balances/runtime-benchmarks',
-    'pallet-timestamp/runtime-benchmarks',
-    'sp-runtime/runtime-benchmarks',
-]
+#runtime-benchmarks = [
+#    'hex-literal',
+#    'frame-benchmarking',
+#    'frame-support/runtime-benchmarks',
+#    'frame-system-benchmarking',
+#    'frame-system/runtime-benchmarks',
+#    'pallet-balances/runtime-benchmarks',
+#    'pallet-timestamp/runtime-benchmarks',
+#    'sp-runtime/runtime-benchmarks',
+#]
 std = [
     'codec/std',
     'serde',
@@ -74,16 +79,18 @@ std = [
     'frame-support/std',
     'frame-system/std',
     'frame-system-rpc-runtime-api/std',
+    'fp-rpc/std',
     'pallet-aura/std',
     'pallet-balances/std',
     'pallet-grandpa/std',
     'pallet-randomness-collective-flip/std',
     'pallet-sudo/std',
-    'pallet-template/std',
+#    'pallet-template/std',
     'pallet-timestamp/std',
     'pallet-transaction-payment/std',
     'pallet-transaction-payment-rpc-runtime-api/std',
     'pallet-evm/std',
+    'pallet-ethereum/std',
     'sp-api/std',
     'sp-block-builder/std',
     'sp-consensus-aura/std',
