--- a/pallets/template/Cargo.toml
+++ b/pallets/template/Cargo.toml
@@ -23,6 +23,7 @@ frame-support = { default-features = false, git = 'https://github.com/paritytech
 frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
 
 [dev-dependencies]
+serde = { version = "1.0.119" }
 sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
 sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
 sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
