--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -28,12 +28,13 @@ serde = { features = ['derive'], optional = true, version = '1.0.119' }
 pallet-template = { path = '../pallets/template', default-features = false, version = '0.0.1' }
 
 # Substrate dependencies
-#frame-benchmarking = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', optional = true }
+frame-benchmarking = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', optional = true }
 frame-executive = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
 frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
 frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
-#frame-system-benchmarking = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', optional = true }
+frame-system-benchmarking = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', optional = true }
 frame-system-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+
 pallet-aura = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
 pallet-balances = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
 pallet-grandpa = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
@@ -42,6 +43,7 @@ pallet-sudo = { default-features = false, git = 'https://github.com/paritytech/s
 pallet-timestamp = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
 pallet-transaction-payment = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
 pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+
 sp-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
 sp-block-builder = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
 sp-consensus-aura = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
@@ -53,7 +55,6 @@ sp-session = { default-features = false, git = 'https://github.com/paritytech/su
 sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
 sp-transaction-pool = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
 sp-version = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
-sc-network = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
 
 pallet-evm = { default-features = false, git = 'https://github.com/thanhtung6824/frontier.git', branch = 'v0.1-polka' }
 pallet-ethereum = { default-features = false, git = 'https://github.com/thanhtung6824/frontier.git', branch = 'v0.1-polka' }
@@ -62,16 +63,16 @@ fp-rpc = { default-features = false, git = 'https://github.com/thanhtung6824/fro
 
 [features]
 default = ['std']
-#runtime-benchmarks = [
-#    'hex-literal',
-#    'frame-benchmarking',
-#    'frame-support/runtime-benchmarks',
-#    'frame-system-benchmarking',
-#    'frame-system/runtime-benchmarks',
-#    'pallet-balances/runtime-benchmarks',
-#    'pallet-timestamp/runtime-benchmarks',
-#    'sp-runtime/runtime-benchmarks',
-#]
+runtime-benchmarks = [
+    'hex-literal',
+    'frame-benchmarking',
+    'frame-support/runtime-benchmarks',
+    'frame-system-benchmarking',
+    'frame-system/runtime-benchmarks',
+    'pallet-balances/runtime-benchmarks',
+    'pallet-timestamp/runtime-benchmarks',
+    'sp-runtime/runtime-benchmarks',
+]
 std = [
     'codec/std',
     'serde',
@@ -85,7 +86,7 @@ std = [
     'pallet-grandpa/std',
     'pallet-randomness-collective-flip/std',
     'pallet-sudo/std',
-#    'pallet-template/std',
+    'pallet-template/std',
     'pallet-timestamp/std',
     'pallet-transaction-payment/std',
     'pallet-transaction-payment-rpc-runtime-api/std',
