--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -62,6 +62,8 @@ pallet-ethereum = { default-features = false, git = 'https://github.com/polkafou
 
 fp-rpc = { default-features = false, git = 'https://github.com/polkafoundry/frontier.git', branch = 'v0.1-polka' }
 
+cumulus-pallet-parachain-system = { git = 'https://github.com/paritytech/cumulus',  default-features = false, branch = 'master' }
+
 [features]
 default = ['std']
 runtime-benchmarks = [
@@ -104,4 +106,5 @@ std = [
     'sp-std/std',
     'sp-transaction-pool/std',
     'sp-version/std',
+    'cumulus-pallet-parachain-system/std'
 ]
