--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -76,12 +76,12 @@ fp-rpc = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'v0.1-
 fc-rpc = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'v0.1-polka' }
 fc-rpc-core = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'v0.1-polka' }
 
-cumulus-client-consensus-relay-chain = { git = 'https://github.com/polkafoundry/cumulus.git', branch = 'v0.1-polka' }
-cumulus-client-service = { git = 'https://github.com/polkafoundry/cumulus.git', branch = 'v0.1-polka' }
-cumulus-client-network = { git = 'https://github.com/polkafoundry/cumulus.git', branch = 'v0.1-polka' }
-cumulus-primitives-core = { git = 'https://github.com/polkafoundry/cumulus.git', branch = 'v0.1-polka' }
-cumulus-primitives-parachain-inherent = { git = 'https://github.com/polkafoundry/cumulus.git', branch = 'v0.1-polka' }
-cumulus-test-relay-sproof-builder = { git = 'https://github.com/polkafoundry/cumulus.git', branch = 'v0.1-polka' }
+cumulus-client-consensus-relay-chain = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
+cumulus-client-service = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
+cumulus-client-network = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
+cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
+cumulus-primitives-parachain-inherent = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
+cumulus-test-relay-sproof-builder = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
 
 polkadot-primitives = { git = 'https://github.com/paritytech/polkadot', branch = 'master' }
 polkadot-service = { git = 'https://github.com/paritytech/polkadot', branch = 'master' }
