point back to rococo-v1#10887b728c563329845192915069a094b3f06139

--- a/pallets/template/Cargo.toml
+++ b/pallets/template/Cargo.toml
@@ -19,14 +19,14 @@ package = 'parity-scale-codec'
 version = '2.0.0'
 
 [dependencies]
-frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
-frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
+frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
 
 [dev-dependencies]
 serde = { version = "1.0.119" }
-sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
-sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
-sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
+sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
+sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
 
 [features]
 default = ['std']
