change copy path

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -10,8 +10,7 @@ RUN useradd -m -u 1000 -U -s /bin/sh -d /polkafoundry polkafoundry && \
 
 USER polkafoundry
 
-COPY --chown=polkafoundry bin/polkafoundry /polkafoundry/polkafoundry
-COPY --chown=polkafoundry tests/specs/polka-spec.json /polkafoundry/spec.json
+COPY --chown=polkafoundry ../bin/polkafoundry /polkafoundry/polkafoundry
 
 RUN chmod uog+x /polkafoundry/polkafoundry
 
