--- a/bot/package.json
+++ b/bot/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
+    "ioredis": "^4.24.5",
     "node-telegram-bot-api": "^0.51.0",
     "web3": "^1.3.4"
   }
