--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,17 @@
 version: "3.2"
 
 services:
-  bot:
-    container_name: node-bot
-    build:
-      context: ./bot/.
-      dockerfile: Dockerfile
-    env_file: bot/.env.docker
-    working_dir: /app
+  dev:
+    container_name: node-template
+    image: paritytech/ci-linux:974ba3ac-20201006
+    working_dir: /var/www/node-template
+    ports:
+      - "9944:9944"
+    environment:
+      - CARGO_HOME=/var/www/node-template/.cargo
     volumes:
-      - ./bot:/app
-    depends_on:
-      - redis
-    networks:
-      botlink:
-        ipv4_address: 192.168.11.10
-
-  redis:
-    image: redis:6.2.1-alpine
-    container_name: redis
-    hostname: redis
-    tty: true
-    networks:
-      botlink:
-        ipv4_address: 192.168.11.11
-
-networks:
-  botlink:
-    driver: bridge
-    ipam:
-      driver: default
-      config:
-        - subnet: 192.168.11.0/24
+      - .:/var/www/node-template
+      - type: bind
+        source: ./.local
+        target: /root/.local
+    command: bash -c "cargo build --release && ./target/release/node-template --dev --ws-external"
