--- a/bot/.env.docker
+++ b/bot/.env.docker
@@ -1,4 +1,4 @@
-SOCKET_URI=ws://54.169.215.160:9944
+SOCKET_URI=wss://rococo.polkafoundry.com
 
 TELEGRAM_TOKEN=1746819351:AAFyZc4KNagL3AXm3gvVe1L2QdBQdVTskoc
 
