Feature docker build

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,20 @@
+FROM paritytech/ci-linux:production as builder
+LABEL description="This is the build stage for Polkafoundry. Here we create the binary."
+
+ARG PROFILE=release
+WORKDIR /polkafoundry
+
+COPY . /polkafoundry
+
+RUN nice -n 20 cargo build --$PROFILE
+
+# ===== SECOND STAGE ======
+
 FROM debian:bullseye-slim
 LABEL description="Binary for Polkafoundry Collator"
+
+ARG PROFILE=release
+#COPY --from=builder /polkafoundry/target/$PROFILE/polkafoundry /usr/local/bin
 
 RUN useradd -m -u 1000 -U -s /bin/sh -d /polkafoundry polkafoundry && \
 	mkdir -p /polkafoundry/.local/share && \
@@ -10,10 +25,10 @@ RUN useradd -m -u 1000 -U -s /bin/sh -d /polkafoundry polkafoundry && \
 
 USER polkafoundry
 
-COPY --chown=polkafoundry bin/polkafoundry /polkafoundry/polkafoundry
-COPY --chown=polkafoundry specs/halongbay-v1/halongbaySpec.json /polkafoundry/spec.json
+#COPY --chown=polkafoundry bin/polkafoundry /polkafoundry/polkafoundry
+COPY --from=builder /polkafoundry/target/$PROFILE/polkafoundry /polkafoundry/polkafoundry
 
-RUN chmod uog+x /polkafoundry/polkafoundry
+RUN chmod a+x /polkafoundry/polkafoundry
 
 EXPOSE 30333 9933 9944
 
