--- a/pallets/template/Cargo.toml
+++ b/pallets/template/Cargo.toml
@@ -16,7 +16,7 @@ targets = ['x86_64-unknown-linux-gnu']
 default-features = false
 features = ['derive']
 package = 'parity-scale-codec'
-version = '2.0.0'
+version = '=2.0.0'
 
 [dependencies]
 frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
