--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -18,7 +18,7 @@ substrate-wasm-builder = { version = '4.0.0', git = 'https://github.com/parityte
 default-features = false
 features = ['derive']
 package = 'parity-scale-codec'
-version = '2.0.0'
+version = '=2.0.0'
 
 [dependencies]
 hex-literal = { optional = true, version = '0.3.1' }
